force-app/main/default/objects/Contact/fields/Data_cessazione_appartenza_Cda__c.field-meta.xml
<CustomField>
    <fullName>Data_cessazione_appartenza_Cda__c</fullName>
    <label>Data cessazione appartenza Cda</label>
    <type>Date</type>
</CustomField>