force-app/main/default/objects/Contact/fields/Is_Board_Member__c.field-meta.xml
<CustomField>
    <fullName>Is_Board_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Membro CdA</label>
    <type>Checkbox</type>
</CustomField>