force-app/main/default/objects/Contact/fields/Membro_Cda_Attivo__c.field-meta.xml
<CustomField>
    <fullName>Membro_Cda_Attivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Membro Cda Attivo</label>
    <type>Checkbox</type>
</CustomField>